# filefinder

./: Cargo.toml  README.md
src/: compiler.rs  compiler.rs_bak  compiler.rs_bak2  interpreter.rs  lib.rs  main.rs  pathbuf.rs  tools.rs  treewalk.rs  treewalkmethods.rs
src/oldcode/: 001_helpstring.txt  002_utf8_vs_OsString.txt  003_for_to_iter.txt  004_link_handling.txt
tests/: DONE.txt  README.txt  run_all_tests.sh  run_all_tests_debug.sh  run_all_tests_release.sh  test001.sh  test002.sh  test003.sh  test004.sh  test005.sh  test006.sh  test007.sh  test008.sh
tests/difflog/: expected.txt  out.txt  out_compiler.txt  out_interpreter.txt
tests/space/: to-a-d  to-b-e  to-c-f-i.txt
