[package]
name = "filefinder"
version = "1.12.6"
authors = ["Frank Schwidom <schwidom@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
regex = "1.7.0"
sexp = "1.1.4"
strfmt = "0.2.2"
chrono = "0.4.23"

